[package]
name = "my-transaction-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
env_logger = "0.8"
clap = { version = "3.1", features = ["derive"] }
csv = "1.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = { version = "1.24", features = ["serde-with-str"] }
